--- a/index.html
+++ b/index.html
@@ -186,52 +186,69 @@
 </section>
 
 <!-- 🔹 تحميل PayPal SDK -->
-<script>
-        document.addEventListener("DOMContentLoaded", function () {
-            const TELEGRAM_BOT_TOKEN = "YOUR_TELEGRAM_BOT_TOKEN"; // ✅ استبدل بتوكن البوت الحقيقي
-            const TELEGRAM_CHAT_ID = "YOUR_TELEGRAM_CHAT_ID"; // ✅ استبدل بمعرف الشات الخاص بك
+<!-- 🔹 PayPal SDK -->
+<script src="https://www.paypal.com/sdk/js?client-id=ATKrzVCARP5-n0VyW8s9T9IOn9IbmHwJKRzC5bo9c7CqJ-5c1Z-g3Q28CNTyAmuluEmBPh54BNHRIP_A&components=buttons"></script>
 
-            function updatePrice() {
-                const quantity = parseInt(document.getElementById("quantity").value);
-                const totalPrice = (1.00 * quantity).toFixed(2);
-                document.getElementById("total-price").textContent = `Price: $${totalPrice}`;
-                return totalPrice;
-            }
+<!-- 🔹 سكربت تحديث السعر وربطه بـ PayPal -->
+ <script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const basePrice = 1.00;
+        const quantitySelect = document.getElementById("quantity");
+        const totalPriceElement = document.getElementById("total-price");
 
-            document.getElementById("quantity").addEventListener("change", updatePrice);
+        function updatePrice() {
+            const quantity = parseInt(quantitySelect.value);
+            const totalPrice = basePrice * quantity;
+            totalPriceElement.textContent = `Price: $${totalPrice.toFixed(2)}`;
+            return totalPrice.toFixed(2);
+        }
 
-            function renderPayPalButtons() {
-                paypal.Buttons({
-                    style: { layout: 'vertical', color: 'gold', shape: 'rect', label: 'checkout' },
-                    createOrder: function (data, actions) {
-                        return actions.order.create({
-                            purchase_units: [{ amount: { value: updatePrice() } }]
-                        });
-                    },
-                    onApprove: function (data, actions) {
-                        return actions.order.capture().then(function (details) {
-                            alert(`✅ Payment successful! Order ID: ${details.id}`);
-                            let message = `📢 *New Payment Received!* 🚀\n\n` +
-                                          `🆔 *Order ID:* ${details.id}\n` +
-                                          `💰 *Amount Paid:* ${details.purchase_units[0].amount.value} ${details.purchase_units[0].amount.currency_code}`;
-                            fetch(`https://api.telegram.org/bot${TELEGRAM_BOT_TOKEN}/sendMessage`, {
-                                method: "POST",
-                                headers: { "Content-Type": "application/json" },
-                                body: JSON.stringify({
-                                    chat_id: TELEGRAM_CHAT_ID,
-                                    text: message,
-                                    parse_mode: "Markdown"
-                                })
-                            });
-                        });
-                    }
-                }).render("#paypal-button-container");
-            }
-
+        quantitySelect.addEventListener("change", function () {
             updatePrice();
-            renderPayPalButtons();
+            renderPayPalButton();
         });
-    </script><!-- 🔹 Social Media Icons -->
+
+        function renderPayPalButton() {
+            document.getElementById("paypal-button-container").innerHTML = "";
+            paypal.Buttons({
+                createOrder: function (data, actions) {
+                    return actions.order.create({
+                        purchase_units: [{
+                            amount: { value: updatePrice() }
+                        }]
+                    });
+                },
+                onApprove: function (data, actions) {
+                    return actions.order.capture().then(function (details) {
+                        let orderID = details.id;
+                        alert(`✅ Payment successful via PayPal!\n🆔 Order ID: ${orderID}`);
+
+                        // 🔹 إرسال البيانات إلى تيليجرام
+                        let message = `📢 *New Payment Received!* 🚀\n\n` +
+                                      `🆔 *Order ID:* ${details.id}\n` +
+                                      `👤 *Name:* ${details.payer.name.given_name} ${details.payer.name.surname}\n` +
+                                      `📧 *Email:* ${details.payer.email_address}\n` +
+                                      `📍 *Address:* ${details.purchase_units[0].shipping.address.address_line_1}, ${details.purchase_units[0].shipping.address.admin_area_2}, ${details.purchase_units[0].shipping.address.admin_area_1}, ${details.purchase_units[0].shipping.address.country_code}\n` +
+                                      `💰 *Amount Paid:* ${details.purchase_units[0].amount.value} ${details.purchase_units[0].amount.currency_code}`;
+
+                        fetch(`https://api.telegram.org/botYOUR_TELEGRAM_BOT_TOKEN/sendMessage`, {
+                            method: "POST",
+                            headers: { "Content-Type": "application/json" },
+                            body: JSON.stringify({
+                                chat_id: "YOUR_TELEGRAM_CHAT_ID",
+                                text: message,
+                                parse_mode: "Markdown"
+                            })
+                        }).catch(error => console.error("Telegram API error:", error));
+                    });
+                }
+            }).render("#paypal-button-container");
+        }
+
+        updatePrice();
+        renderPayPalButton();
+    });
+ </script><!-- 🔹 Social Media Icons -->
       <div class="social-icons-container">
           <a href="https://www.tiktok.com" target="_blank"><img src="IMG_3298.png" alt="TikTok"></a>
           <a href="https://www.instagram.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram"></a>
