--- a/Payment.html
+++ b/Payment.html
@@ -5,220 +5,142 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout & Payment</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://www.paypal.com/sdk/js?client-id=YOUR_PAYPAL_CLIENT_ID"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f5f5f5;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            max-width: 1000px;
-            margin: 50px auto;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.1);
-        }
-        .steps {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 20px;
-            padding: 10px;
-            font-size: 18px;
-        }
-        .step {
-            position: relative;
-            text-align: center;
-            color: gray;
-        }
-        .step::after {
-            content: '';
-            width: 100px;
-            height: 2px;
-            background: lightgray;
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translateY(-50%);
-            z-index: -1;
-        }
-        .step:last-child::after {
-            display: none;
-        }
-        .step.active {
-            color: green;
-            font-weight: bold;
-        }
-        .checkout-container {
-            display: flex;
-            gap: 20px;
-        }
-        .left-panel, .right-panel {
-            flex: 1;
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-        }
-        .right-panel {
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-        }
-        .input-group {
-            margin-bottom: 15px;
-        }
-        .input-group label {
-            display: block;
-            font-weight: bold;
-            margin-bottom: 5px;
-        }
-        .input-group input, .input-group select {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-        }
-        .summary-item {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 10px;
-            font-size: 16px;
-        }
-        .payment-options {
-            margin-top: 20px;
-        }
-        .pay-btn {
-            background: #28a745;
-            color: white;
-            width: 100%;
-            padding: 12px;
-            border: none;
-            border-radius: 5px;
-            font-size: 18px;
-            cursor: pointer;
-            transition: 0.3s;
-        }
-        .pay-btn:hover {
-            background: #218838;
-        }
-    </style>
 </head>
-<body>
+<body class="bg-gray-100 min-h-screen flex flex-col items-center py-8">
 
-<div class="container">
-    <!-- ✅ شريط الخطوات -->
-    <div class="steps">
-        <div class="step active">Shopping Cart</div>
-        <div class="step active">Checkout</div>
-        <div class="step">Finish</div>
-    </div>
-
-    <div class="checkout-container">
-        <!-- ✅ قسم إدخال بيانات المستخدم -->
-        <div class="left-panel">
-            <h2>🛒 Checkout</h2>
-            <div class="input-group">
-                <label>Full Name:</label>
-                <input type="text" id="fullName" required>
-            </div>
-            <div class="input-group">
-                <label>Country:</label>
-                <select id="country">
-                    <option value="US">🇺🇸 United States</option>
-                    <option value="UK">🇬🇧 United Kingdom</option>
-                    <option value="DE">🇩🇪 Germany</option>
-                    <option value="FR">🇫🇷 France</option>
-                </select>
-            </div>
-            <div class="input-group">
-                <label>City:</label>
-                <input type="text" id="city" required>
-            </div>
-            <div class="input-group">
-                <label>Address:</label>
-                <input type="text" id="address" required>
-            </div>
-            <div class="input-group">
-                <label>Phone:</label>
-                <input type="tel" id="phone" required>
+    <!-- 🔹 قسم صورة المنتج وزر التحكم في الكمية -->
+    <div class="bg-white shadow-lg rounded-lg p-6 w-full max-w-lg">
+        <div class="flex items-center justify-between">
+            <img src="IMG_3101.jpeg" alt="Product Image" class="w-24 h-24 rounded-lg border">
+            <div>
+                <h2 class="text-xl font-semibold">Smart Sponge Cleaner</h2>
+                <p class="text-gray-500">Product ID: 1005008403950447</p>
             </div>
         </div>
 
-        <!-- ✅ قسم الدفع وملخص الطلب -->
-        <div class="right-panel">
-            <h2>💳 Payment Info</h2>
-            <p>All transactions are secure and encrypted.</p>
-
-            <!-- خيارات الدفع -->
-            <div class="payment-options">
-                <label><input type="radio" name="paymentMethod" value="credit-card" checked> Credit Card</label>
-                <label><input type="radio" name="paymentMethod" value="paypal"> PayPal</label>
+        <div class="flex justify-between items-center mt-4">
+            <p class="text-lg font-semibold">Total: $<span id="total-price">20.00</span></p>
+            <div class="flex">
+                <button id="decrease" class="bg-gray-300 text-gray-700 px-3 py-1 rounded-l">-</button>
+                <span id="quantity" class="px-4 text-lg font-bold">1</span>
+                <button id="increase" class="bg-gray-300 text-gray-700 px-3 py-1 rounded-r">+</button>
             </div>
-
-            <!-- ✅ ملخص الطلب -->
-            <h3>📦 Cart Summary</h3>
-            <div class="summary-item">
-                <span>Product</span>
-                <span>Battlecreek Coffee</span>
-            </div>
-            <div class="summary-item">
-                <span>Code</span>
-                <span>C-7770</span>
-            </div>
-            <div class="summary-item">
-                <span>Quantity</span>
-                <span>2</span>
-            </div>
-            <div class="summary-item">
-                <span>Subtotal</span>
-                <span>$60.49</span>
-            </div>
-            <div class="summary-item">
-                <span>Shipping</span>
-                <span>$12.49</span>
-            </div>
-            <div class="summary-item" style="font-weight: bold;">
-                <span>Total</span>
-                <span>$72.98</span>
-            </div>
-
-            <!-- ✅ زر الدفع -->
-            <button class="pay-btn" id="payNow">Proceed to Payment</button>
         </div>
     </div>
-</div>
 
-<script>
-    document.getElementById("payNow").addEventListener("click", function () {
-        let orderData = {
-            fullName: document.getElementById("fullName").value.trim(),
-            country: document.getElementById("country").value,
-            city: document.getElementById("city").value.trim(),
-            address: document.getElementById("address").value.trim(),
-            phone: document.getElementById("phone").value.trim(),
-            totalPrice: "$72.98"
-        };
+    <!-- 🔹 قسم بيانات العميل -->
+    <div class="bg-white shadow-lg rounded-lg p-6 w-full max-w-lg mt-6">
+        <h3 class="text-xl font-semibold text-gray-900 mb-4">Customer Information</h3>
+        <input type="text" id="fullName" placeholder="Full Name" class="border border-gray-300 p-2 w-full rounded mb-2" required>
+        <input type="text" id="address" placeholder="Address" class="border border-gray-300 p-2 w-full rounded mb-2" required>
+        <input type="text" id="phone" placeholder="Phone Number" class="border border-gray-300 p-2 w-full rounded mb-2" required>
+    </div>
 
-        if (!orderData.fullName || !orderData.city || !orderData.address || !orderData.phone) {
-            alert("❌ Please fill in all required fields.");
-            return;
-        }
+    <!-- 🔹 قسم خيارات الشحن -->
+    <div class="bg-white shadow-lg rounded-lg p-6 w-full max-w-lg mt-6">
+        <h3 class="text-xl font-semibold text-gray-900 mb-4">Shipping Options</h3>
+        <label class="flex items-center mb-2">
+            <input type="radio" name="shipping" value="Standard" checked>
+            <span class="ml-2">Standard (5-7 Days) - $5.00</span>
+        </label>
+        <label class="flex items-center">
+            <input type="radio" name="shipping" value="Express">
+            <span class="ml-2">Express (2-3 Days) - $12.00</span>
+        </label>
+    </div>
 
-        // ✅ إرسال الطلب إلى تيليجرام
-        fetch(`https://api.telegram.org/botYOUR_BOT_TOKEN/sendMessage`, {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({
-                chat_id: "YOUR_CHAT_ID",
-                text: `📦 *New Order Received!* 🚀\n👤 *Name:* ${orderData.fullName}\n📍 *Country:* ${orderData.country}\n🏙️ *City:* ${orderData.city}\n📌 *Address:* ${orderData.address}\n📞 *Phone:* ${orderData.phone}\n💰 *Total:* ${orderData.totalPrice}`,
-                parse_mode: "Markdown"
-            })
+    <!-- 🔹 قسم طرق الدفع -->
+    <div class="bg-white shadow-lg rounded-lg p-6 w-full max-w-lg mt-6">
+        <h3 class="text-xl font-semibold text-gray-900 mb-4">Payment Method</h3>
+        <label class="flex items-center mb-2">
+            <input type="radio" name="payment" value="applepay" checked>
+            <span class="ml-2">🍏 Apple Pay</span>
+        </label>
+        <label class="flex items-center mb-2">
+            <input type="radio" name="payment" value="paypal">
+            <span class="ml-2">💳 PayPal</span>
+        </label>
+        <label class="flex items-center mb-2">
+            <input type="radio" name="payment" value="creditcard">
+            <span class="ml-2">💳 Credit Card</span>
+        </label>
+        <label class="flex items-center">
+            <input type="radio" name="payment" value="usdt">
+            <span class="ml-2">🪙 USDT (Crypto)</span>
+        </label>
+    </div>
+
+    <!-- 🔹 زر تأكيد الطلب -->
+    <button id="confirmOrder" class="bg-purple-700 text-white py-2 px-4 w-full max-w-lg rounded text-lg font-semibold mt-6">
+        Confirm Order
+    </button>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            let pricePerItem = 20.00;
+            let totalPrice = pricePerItem;
+            let shippingCost = 5.00;
+
+            const quantityElement = document.getElementById("quantity");
+            const totalPriceElement = document.getElementById("total-price");
+            const increaseButton = document.getElementById("increase");
+            const decreaseButton = document.getElementById("decrease");
+            const shippingOptions = document.querySelectorAll("input[name='shipping']");
+            const confirmOrderButton = document.getElementById("confirmOrder");
+
+            function updatePrice() {
+                let quantity = parseInt(quantityElement.textContent);
+                totalPrice = (pricePerItem * quantity) + shippingCost;
+                totalPriceElement.textContent = totalPrice.toFixed(2);
+            }
+
+            increaseButton.addEventListener("click", function () {
+                let quantity = parseInt(quantityElement.textContent);
+                quantityElement.textContent = quantity + 1;
+                updatePrice();
+            });
+
+            decreaseButton.addEventListener("click", function () {
+                let quantity = parseInt(quantityElement.textContent);
+                if (quantity > 1) {
+                    quantityElement.textContent = quantity - 1;
+                    updatePrice();
+                }
+            });
+
+            shippingOptions.forEach(option => {
+                option.addEventListener("change", function () {
+                    shippingCost = this.value === "Express" ? 12.00 : 5.00;
+                    updatePrice();
+                });
+            });
+
+            confirmOrderButton.addEventListener("click", function () {
+                let formData = {
+                    fullName: document.getElementById("fullName").value.trim(),
+                    address: document.getElementById("address").value.trim(),
+                    phone: document.getElementById("phone").value.trim(),
+                    quantity: quantityElement.textContent.trim(),
+                    totalPrice: totalPrice.toFixed(2),
+                    shippingMethod: document.querySelector("input[name='shipping']:checked").value,
+                    paymentMethod: document.querySelector("input[name='payment']:checked").value
+                };
+
+                for (let key in formData) {
+                    if (!formData[key]) {
+                        alert("❌ Please fill in all required fields.");
+                        return;
+                    }
+                }
+
+                sessionStorage.setItem("orderData", JSON.stringify(formData));
+                alert("✅ Order Confirmed! Redirecting to Payment...");
+                window.location.href = "payment.html";
+            });
+
+            updatePrice();
         });
-
-        alert("✅ Payment Successful!");
-        window.location.href = "success.html";
-    });
-</script>
+    </script>
 
 </body>
 </html>
